--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vue-stripe/vue-stripe": "^4.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "bootstrap-vue": "^2.23.1",
     "firebase": "^10.5.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
