--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "dev": "vite",
+    "format": "prettier --write src/",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -21,6 +21,8 @@
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
     "firebase": "^10.5.0",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
@@ -32,6 +34,8 @@
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.4",
-    "vite": "^4.4.9"
+    "sass-loader": "^10.0.2",
+    "vite": "^4.4.9",
+    "vue-cli-plugin-bootstrap-vue": "~0.8.2"
   }
 }
